	* Positioning a model now works with printer profiles that have a circular form factor or a center origin
	* Model editor displays cylindrical printing area when printer profile has a circular form factor
	* Added grid display to model editor that matches up with the same positioning as the G-code viewer and model viewer grids

V1.9 October 20, 2016

	* Provides iMe V00.00.01.23 printer firmware
	* Added options for solid layer fill patterns when using Slic3r. Thanks again ra100!
	* Fixed OS X installer to work with OS X V10.12
	* Removed homing before a print in the preparation pre-processor stage when using iMe firmware
	* Allows disabling sleep and slicer reminders
	* Fixed compatibility with Internet Explorer 11
	* Added the ability to drag and drop files onto the profile and model editors to load the profile or import the model
	* Model editor can now display an axes indicator in the from left corner to better see the orientation of the bed
	* Micro 3D profile and slicer profiles will be removed if not using a Micro 3D printer and added if using a Micro 3D printer
	* Webcam server no longer requires OctoPrint to be restarted for its changed settings to take affect
	* Fixed an issue with the EEPROM manager that occurs when converting newline and carriage return characters from ASCII to decimal or hexadecimal values
	* OctoPrint's available serial ports will now update in real-time

V1.8 September 22, 2016

	* Provides iMe V00.00.01.22 printer firmware
	* Fixed issue that prevented setting calibrate Z0 correction to negative values

V1.7 August 30, 2016

	* Fixed issues with browser incompatibilities with the CSS background-image property
	* Fixed divide by 0 error in bed leveling pre-processor
	* Provides iMe V00.00.01.18 printer firmware
	* Allows setting calibrate Z0 correction for iMe firmware

V1.6 August 17, 2016

	* Provides iMe V00.00.01.12 printer firmware
	* Allows setting homing sensitivity for iMe firmware